--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,13 @@
 
+STAGE=dev
 
+DB_PASSWORD=MySecr3tPassWord@as2
+DB_NAME=TesloDB
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=tareas_db
 DB_USERNAME=postgres
-DB_PASSWORD=ggmra1ibv4
-CONTAINER_NAME=tareas-db
 
-JWT_SECRET=MySecr3tPassWord@as2
+PORT=3000
+HOST_API=http://localhost:3000/api
+
+JWT_SECRET=Est3EsMISE3Dsecreto32s
